# HFE_Kinect

./: .gitignore  COMPONENT_API_REFERENCE.md  DOCUMENTATION_INDEX.md  MIGRATION_COMPARISON.md  README.md  REFACTORING_COMPLETE.md  arm_angle_detection.py  main.py  pyproject.toml  requirements.txt  skeleton_test.py
ai_docs/: QUICK_REFERENCE_CARD.md  REFACTORING_SUMMARY.md  plan.md  startup_flow.md
config/: settings.json
kinect/src/analysis/: arm_angle_detection.py  rula_from_kinect.py
kinect/src/hardware/: config.py
rula_realtime_app/: main.py
rula_realtime_app/core/: __init__.py  camera_handler.py  config.py  kinect_handler.py  pose_detector.py  rula_calculator.py  utils.py  video_config.py
rula_realtime_app/ui/: main_window.py
rula_records/: recording_20260204_152344.txt
src/hfe_kinect/: joint_name.py  rula_from_kinect.py  skeleton_test.py
src/hfe_kinect/analysis/: arm_angle_detection.py  rula_from_kinect.py
src/hfe_kinect/hardware/: config.py
src/rula_realtime_app/ui/: components.py  dialogs.py  main_window.py  styles.py
src/tests/: empty.txt
